syntax = "proto3";

package axorith.v1;

import "Protos/common.proto";

option csharp_namespace = "Axorith.Contracts";

service SessionsService {
  rpc GetSessionState(GetSessionStateRequest) returns (SessionState);
  rpc StartSession(StartSessionRequest) returns (OperationResult);
  rpc StopSession(StopSessionRequest) returns (OperationResult);
  rpc StreamSessionEvents(StreamSessionEventsRequest) returns (stream SessionEvent);
}

message GetSessionStateRequest {
  // TODO
}

message StartSessionRequest {
  string preset_id = 1;
}

message StopSessionRequest {
  // TODO
}

message StreamSessionEventsRequest {
  // Subscribe to all session events
  // In future can add filters
  // TODO
}
